# script-scraper

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
scriptScraper/: extractors.py  simpleExtractor.py  simpleScraper.py  simpleSpider.py
