[metadata]
name = script-scraper-alpha
version = 0.0.5
author = Vladimir Yeghiazaryan
author_email = vladimir.y2000@gmail.com
description = Provides a simple api interface with a scrapy backen for requesting complicated scraping tasks in an intuitive manner.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = script scraper
license = MIT License
url = https://github.com/vlad-yeghiazaryan/script-scraper
classifiers =
    Framework :: Scrapy
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    Scrapy
    scrapydo==0.2.2